crates/eventric-domain/tests/ui/event_unknown_key.rs
use eventric_domain::event::Event;

#[derive(Event)]
#[event(identifier: foo, oops: { item: sku })]
struct Foo {
    sku: String,
}

fn main() {}
